Some changes. Now problems executing nd4j